--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+*{
+    margin: s10px;
+    padding: 0px;
+    box-sizing: border-box;
+    
+}
+body{
+    background-color:#ebf0f3 ;
+}
+.articles{
+    border: 2px solid rgb(133, 133, 133);
+    border-radius: 13px;
+    width: 480px;
+    height: 420px;
+    display: grid;
+    margin-left: 10px;
+    justify-items: center;
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.arrange {
+    height: 400px;
+    width: 300px;
+    display: grid;
+}
+
+.likes{
+    float: left;
+}
+.thumb{
+    margin-top: 2px;
+}
+
+@media screen and (min-width:700px) {
+    .arrange{
+        grid-template-columns: repeat(3,2fr);
+        gap: 1rem;
+    }
 }
